traces/bug_601.txt
src/Graphics/sansrgraph.cpp:751: error: DEAD_STORE
  The value written to &ydelta (type float) is never used.
Showing all 1 steps of the trace


src/Graphics/sansrgraph.cpp:751:3: Write of unused value
749.     float xleft = xmax - (xmax-xmin)*0.1;
750.     float ytop  = ymax;
751.     float ydelta = (ymax-ymin)/40;
         ^
752.     ydelta=GetHeigthFont();
753.     xleft = xmax - 6*ydelta;  
